<resources>
    <string name="app_name">FireB</string>
    <string name="you_are_already_registered">You are already Registered!</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_mail_address">Enter your mail address</string>
    <string name="password">Password</string>
    <string name="enter_unique_id">Enter unique Id</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up1">Sign Up</string>
    <string name="welcome">WELCOME</string>
    <string name="this_are_your_details_from_our_database">This are your details from our DataBase</string>
    <string name="you_are_not_registered">You are not Registered!!  </string>
    <string name="sign_in2">SIGN IN</string>
    <string name="you_are_going_to_win_the_hackathon">YOU ARE GOING TO WIN THE HACKATHON</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="learning_bottom_navigation_view">Learning Bottom Navigation View</string>
    <string name="pay_now">PAY NOW!!</string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="a_small_amount_of_help_bring_a_great_change">A SMALL AMOUNT OF HELP BRING A GREAT CHANGE</string>
    <string name="police">POLICE</string>
    <string name="_112">112</string>
    <string name="news0">East of the Bay? Mocha may change course towards Myanmar, according to predictions</string>
    <string name="news1">Climate change worsened extreme weather events in 2022: State of the Global Climate report</string>
    <string name="news2">White Death: Avalanche strikes near Sikkim’s Nathula Road for the first time; seven tourists killed, 13 rescued</string>
    <string name="news3">Odisha experiencing the country’s worst forest fires again, 642 incidents in March</string>
    <string name="news4">H3N2 influenza virus symptoms include fever and cough; doctors prescribe best time to take annual flue vaccine</string>
    <string name="news5">Three year since outbreak of COVID-19 pandemic in india, country records 66 new infections</string>
    <string name="news6">Shaken by Giaspura gas leak tragedy, Ludhiana school hold disaster mgmt drill</string>
    <string name="news7">Rwanda floods kill 130, destroy over 5,000 houses</string>
    <string name="newsDetail0">The cyclonic storm Mocha may change its course from the earlier prediction of making landfall in Odisha and West Bengal, as it is likely to move towards Myanmar, according to weather forecast website Windy.
The cyclonic circulation, likely to develop over the southeast Bay of Bengal around May 6, would concentrate into a depression over 24 hours, the India Meteorological Department (IMD) said on May 4, 2023.
In its official statement, the IMD predicts the depression to intensify and develop into a cyclonic storm by May 8 and move northwards towards the Bay of Bengal.
However, the officials claim that it is too early to trace the exact path of the cyclone and the picture will be clear only after the formation of low pressure area.  “It is expected that an upper cyclonic circulation in the upper atmosphere will form by May 6. It will be followed by a lower cyclonic circulation on Sunday. This
        is expected to happen if the conditions conducive to form a cyclone continue,” said Anupam Kashyapi, head of IMD’s weather forecasting department.
Once the system is formed, it is expected that the circulation will lead to a depression by the evening of May 8, Kashyapi said.
“However, the track of the cyclone will only become clearer once the system is formed. Considering the existing conditions and climate models, it is predicted that the cyclone will skirt India and Bangladesh through south coastal areas, Odisha and southeast Gangetic West Bengal,” he added.
The official said the conditions or the process of cyclone formation has been slightly delayed than expected.
The cyclonic formation is likely, but the steering winds are not clear to help understand the path of the cyclone, said Raghu Murtugudde, a climate scientist at the University of Maryland and Indian Institute of Technology, Bombay. Murtugudde added that Mumbai and Delhi have seen cooler summers in the past couple of months which is an anomaly considering the peak summer months. “As the winds are not normal, it may affect the course of cyclone,” he said.
However, the Bay of Bengal has warmed quite a bit in March and April. “It is something to worry about. Warm ocean often lead to rapid intensification (RI) of cyclones,” he said.
RI is defined as the shooting up of maximum sustained wind speed by at least 55 km per hour within a 24-hour period. “Such acceleration comes with a rapid drop in the pressure in the eye of a cyclone,” he explained.
Considering the cyclone forming moisture load, all ingredients exist for rapid intensification, he added.</string>
    <string name="newsDetail1">Rising global temperatures in 2022 contributed to more frequent and intense extreme weather events all around the world, according the State of the Global Climate 2022 report released April 21, 2022 by the World Meteorological Organization.
These extreme weather events included heatwaves, droughts, wildfires, cold extremes, heavy rain, flooding, tropical cyclones and other extreme storms such as tornadoes in the United States.
Many of these events have also been attributed to climate change due to human-emitted greenhouse gases in the atmosphere, which are also at a record high. There were 366 locations around the country that broke their highest temperature record during the period. Southern regions of China suffered from a 20 to 50 per cent rainfall deficit. The severe drought led to the Yangtze river drying up and reaching its lowest level on record at Wuhan.
Europe also suffered from severe heat events in all its summer months. The heatwaves reached their peak in mid-July when the United Kingdom recorded a maximum temperature of 40°C for the first time.
A study by a group of scientists at World Weather Attribution (WWA) said climate change had made this occurrence 10 times more likely. Temperature records also broke in Germany and Sweden in July.
In the previous month, Urbe (Rome) had recorded 40°C. Other countries in the Mediterranean region also suffered from the heat during the summer.
Tunisia recorded its hottest June, while a new temperature record of 49.1°C was set at Smara (Morocco) on July 10. The Mediterranean Sea also suffered from marine heatwaves from March to December.
Exceptionally high temperatures were also recorded in Antarctica in March 2022 where two of the sites — Dome C and Vostok — recorded temperatures that were 35°C above the average for March and 15°C above the previous record years.
The heatwaves were followed by drought in most of the European countries, with water levels in many of the major rivers such as the Rhine, Loire and Danube, falling to record low levels. Germany, France, the UK and Italy recorded their driest periods in almost 50 years.
Read more: State of the Global Climate report: 58% of ocean suffered at least one marine heatwave event in 202
The ongoing intense drought in the Horn of Africa also intensified with the fourth and fifth consecutive poor rainfall seasons in Kenya, Somalia and Ethiopia. Droughts also continued in Chile in South America and the western and southern states in the United States.
The heatwaves in India and Pakistan in the spring and summer seasons of 2022 brought down the yield of wheat crops, significantly pushing the Government of India to ban wheat exports from the country. A WWA study showed these heatwaves to have become 30 times more likely due to climate change.
The summer heatwaves in Pakistan were followed by devastating floods in August, which killed around 1,700 people and affected 33 million people. The flood waters covered 9 per cent of the total geographical area of the country, showed satellite imagery.
In Nigeria, flooding occurred all through the rainy season, which was exacerbated in October due to very heavy rainfall, causing 603 deaths.
Storms and tropical cyclones had a particularly drastic impact on the island country of Madagascar. From the middle of January to early February, three tropical storm systems battered Madagascar with extremely heavy rains.
The rainfall started with an inter-tropical convergence zone (ITCZ) in mid-January, which is the region where the northeast and southwest trade winds converge to form a band of clouds with rainfall and occasional thunderstorms near the equator.</string>
    <string name="disaster1">EARTHQUAKE</string>
    <string name="disasterDetail1">"An earthquake is the shaking of the surface of the Earth resulting from a sudden release of energy in the Earth lithosphere that creates seismic waves.

DO'S
Do not panic
1. If already inside, than Stay indoors! Get under a heavy desk or table and   hang on to it.
2. If fire breaks out, drop on the floor and crawl towards the exit
3. If you are out doors during the quake, keep away from buildings, trees and electricity lines. Walk towards open places, in a calm and  composed manner.

DON'TS
1. Do not enter into the unsafe or risky houses or buildings
2. Don't light your kitchen stove if you suspect a gas leak.
3. Do not keep telephone lines busy unnecessarily."</string>
</resources>