<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisasterDetail">

    <ImageView
        android:id="@+id/disasterImage"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat = "@drawable/earthquake"
        android:contentDescription="@string/news0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disasterHeading"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="35sp"
        android:text="@string/disaster1"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/disasterContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/disasterDetail1"
                    android:textColor="@color/black" />
            </ScrollView>
        </LinearLayout>


    </ScrollView>

</LinearLayout>