<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".Payment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_small_amount_of_help_bring_a_great_change"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:cardCornerRadius="18dp"
        android:layout_margin="15dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/payment_logo1"
            android:background="@color/white"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/pay"
        android:layout_marginTop="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_amount"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnPayNow"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_now"
        app:cornerRadius="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#03A9F4"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/paymentStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="Payment Status"
        android:textColor="@color/black"/>


</LinearLayout>