<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signin_screen"
    tools:context=".SignIn">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:hint="Email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/etPassword"
            android:layout_height="wrap_content"
            android:inputType="textPassword|numberPassword"
            android:textColor="@color/yellow"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_gravity="center"
        app:cornerRadius="15dp"
        android:backgroundTint="#86867F"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:text="@string/sign_in2"
        android:textColor="@color/white"
        android:textSize="20sp"
        />


    <Button
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="300dp"
        app:cornerRadius="10dp"
        android:text="GOOGLE SIGN IN"
        android:backgroundTint="#EACE69"
        android:textSize="18sp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_registered"
            android:textSize="15sp"
            android:layout_marginStart="95dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up1"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"/>
    </LinearLayout>
</LinearLayout>